src/test/deca/syntax/invalid/sansobjet/Supeq2.deca
//Supeq2.deca:5:5: mismatched input '>=' expecting {STRING,
//Description:  inf sans droite
//Resultat: Erreur ligne 5
{
     >= 12;
}
